RESOLVED FIXED 263833
AX: AXPropertyName::URL is not updated after the src attribute changes
https://bugs.webkit.org/show_bug.cgi?id=263833
Summary AX: AXPropertyName::URL is not updated after the src attribute changes
Tyler Wilcock
Reported 2023-10-28 14:01:44 PDT
This causes the AXURL attribute to become stale.
Attachments
Patch (7.32 KB, patch)
2023-10-28 14:04 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-10-28 14:01:51 PDT
Tyler Wilcock
Comment 2 2023-10-28 14:04:55 PDT
EWS
Comment 3 2023-10-28 18:19:08 PDT
Committed 269899@main (75ddd6414386): <https://commits.webkit.org/269899@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468386 [details].
Note You need to log in before you can comment on or make changes to this bug.