AX: AXPropertyName::URL is not updated after the src attribute changes https://bugs.webkit.org/show_bug.cgi?id=263833 rdar://problem/117632641

Reviewed by Chris Fleizach.

This causes the AXURL attribute to become stale.

* LayoutTests/accessibility/url-test-expected.txt:
* LayoutTests/accessibility/url-test.html:
* LayoutTests/accessibility/video-element-url-attribute-expected.txt:
* LayoutTests/accessibility/video-element-url-attribute.html:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):

Canonical link: https://commits.webkit.org/269899@main